FIX : #63 DM z-index, prop name

--- a/src/components/directMessage/directMessage.scss
+++ b/src/components/directMessage/directMessage.scss
@@ -22,6 +22,7 @@ ul li {
 }
 
 .DM {
+  z-index: 10;
 	position: absolute;
 	width: 360px;
 	height: fit-content;
@@ -57,6 +58,9 @@ ul li {
 			border-style: none;
 			background: transparent;
 			margin-right: 14px;
+      &:hover{
+        cursor: pointer;
+      }
 		}
 	}
 	ul {
